# excel-report-maker

./: .gitignore  README.md  pyproject.toml
src/excel_report_maker/: __init__.py
tests/: test_embedding.py  test_generation.py
