[project]
name = "excel_report_maker"
version = "0.1.1"
description = "A utility for building standardized Excel reports with Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
